[gd_scene load_steps=6 format=3 uid="uid://bmhrys6ja8i7y"]

[ext_resource type="Script" uid="uid://dw8yahesec518" path="res://scenes/misc/match_list.gd" id="1_febjh"]
[ext_resource type="PackedScene" uid="uid://blev8t8g4iq0m" path="res://scenes/misc/icon_button.tscn" id="2_hased"]
[ext_resource type="Texture2D" uid="uid://2jdd70qmbibk" path="res://assets/icons/x.png" id="3_mt0j0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jebsj"]
bg_color = Color(0, 0.301961, 0.301961, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2rfi0"]
bg_color = Color(0, 0, 0, 1)

[node name="MatchList" type="CenterContainer"]
custom_minimum_size = Vector2(1280, 720)
script = ExtResource("1_febjh")

[node name="FullscreenClose" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(1280, 720)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jebsj")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(1000, 600)
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TitleBar" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 2

[node name="IconButton" parent="PanelContainer/MarginContainer/TitleBar" instance=ExtResource("2_hased")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("3_mt0j0")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="TitleBar2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TitleBar2"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Active Matches"

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Headers" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Headers"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Headers/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Player1"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Headers/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Oshi"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Headers/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Player2"
horizontal_alignment = 1

[node name="Label6" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Headers/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Oshi"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Headers/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Room Name"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Headers/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Observe?"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2rfi0")

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MatchBox" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[connection signal="pressed" from="FullscreenClose" to="." method="_on_fullscreen_close_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/TitleBar/IconButton" to="." method="_on_fullscreen_close_pressed"]
